--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "shift-parser": "^5.0.1",
     "uglify-js": "^2.6.2",
     "watch-run": "^1.2.4",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "webdesignio": "webdesignio/webdesignio#feature/browser"
   }
 }
