--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "uglify-js": "^2.6.2",
     "watch-run": "^1.2.4",
     "watchify": "^3.7.0",
-    "webdesignio": "webdesignio/webdesignio"
+    "webdesignio": "github:webdesignio/webdesignio",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "standard": "^7.1.2"
