Add mongodb; adapt rendering mechanism
This closes #1.

--- a/scripts/build
+++ b/scripts/build
@@ -24,6 +24,7 @@ echo "  Generating component index"
 scripts/create_component_index > src/components/index.js
 echo "  Building client"
 browserify \
+  -s CMS \
   -t [ babelify --presets [ react es2015 ] ] \
   -o client.js \
   src/client.js 2>&1 >> wdio.log
