--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
+    "http-errors": "^1.5.0",
+    "node-dev": "^3.1.3",
     "standard": "^7.1.2"
   }
 }
