--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "chalk": "^1.1.3",
+    "envify": "^3.4.0",
     "express": "^4.13.4",
     "pug": "^2.0.0-beta3",
     "pug-cli": "^1.0.0-alpha6",
