--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
+    "body-parser": "^1.15.2",
     "browserify": "^13.0.1",
     "chalk": "^1.1.3",
     "envify": "^3.4.0",
