--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "watch-run": "^1.2.4",
     "watchify": "^3.7.0",
     "webdesignio": "github:webdesignio/webdesignio",
+    "webdesignio-floorman": "github:webdesignio/floorman",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
