--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@webdesignio/floorman": "0.0.0",
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
@@ -62,7 +63,6 @@
     "watch-run": "^1.2.4",
     "watchify": "^3.7.0",
     "webdesignio": "github:webdesignio/webdesignio",
-    "webdesignio-floorman": "github:webdesignio/floorman",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
