--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   "devDependencies": {
     "http-errors": "^1.5.0",
     "node-dev": "^3.1.3",
+    "node-inspector": "^0.12.8",
     "standard": "^7.1.2"
   }
 }
