--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "build": "scripts/build"
   },
   "wdio": {
+    "defaultLanguage": "en",
+    "languages": [
+      "de",
+      "en"
+    ],
     "globals": {
-      "title": ""
+      "header": null
     },
     "components": {
       "Inplace": [
@@ -44,7 +49,7 @@
   "license": "ISC",
   "dependencies": {
     "@webdesignio/core": "0.0.0",
-    "@webdesignio/floorman": "0.1.1",
+    "@webdesignio/floorman": "0.3.1",
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
