--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "chalk": "^1.1.3",
     "envify": "^3.4.0",
     "express": "^4.13.4",
+    "mongoose": "^4.5.2",
     "pug": "^2.0.0-beta3",
     "pug-cli": "^1.0.0-alpha6",
     "react": "^15.1.0",
