--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
       "de",
       "en"
     ],
+    "noLangFields": [
+      "logo"
+    ],
     "globals": {
+      "logo": null,
       "header": null
     },
     "components": {
@@ -48,8 +52,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@webdesignio/core": "0.0.0",
-    "@webdesignio/floorman": "0.3.1",
+    "@webdesignio/core": "0.1.0",
+    "@webdesignio/floorman": "0.4.0",
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
