--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "license": "ISC",
   "dependencies": {
     "@webdesignio/core": "0.1.0",
-    "@webdesignio/floorman": "0.4.0",
+    "@webdesignio/floorman": "^0.5.1",
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
@@ -70,6 +70,7 @@
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "rollupify": "^0.3.1",
     "shift-codegen": "^5.0.2",
     "shift-parser": "^5.0.1",
