--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "body-parser": "^1.15.2",
     "browserify": "^13.0.1",
     "chalk": "^1.1.3",
+    "cors": "^2.7.1",
     "envify": "^3.4.0",
     "express": "^4.13.4",
     "mongoose": "^4.5.2",
