--- a/package.json
+++ b/package.json
@@ -60,19 +60,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@webdesignio/core": "0.1.0",
     "@webdesignio/floorman": "^1.0.0",
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "browserify": "^13.0.1",
     "chalk": "^1.1.3",
     "cors": "^2.7.1",
     "envify": "^3.4.0",
     "express": "^4.13.4",
-    "mongoose": "^4.5.2",
+    "mkdirp": "^0.5.1",
     "mustache": "^2.2.1",
     "pug": "^2.0.0-beta3",
     "pug-cli": "^1.0.0-alpha6",
@@ -84,6 +84,7 @@
     "rollupify": "^0.3.1",
     "shift-codegen": "^5.0.2",
     "shift-parser": "^5.0.1",
+    "shortid": "^2.2.6",
     "uglify-js": "^2.6.2",
     "watch-run": "^1.2.4",
     "watchify": "^3.7.0",
@@ -92,7 +93,6 @@
   "devDependencies": {
     "http-errors": "^1.5.0",
     "node-dev": "^3.1.3",
-    "node-inspector": "^0.12.8",
     "standard": "^7.1.2"
   }
 }
