--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "scripts/start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "scripts/build"
+    "build": "node scripts/build"
   },
   "webdesignio": {
     "defaultLanguage": "en",
@@ -61,7 +61,7 @@
   "license": "ISC",
   "dependencies": {
     "@webdesignio/floorman": "^1.0.0",
-    "babel-cli": "^6.10.1",
+    "babel-core": "^6.13.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
@@ -72,10 +72,10 @@
     "cors": "^2.7.1",
     "envify": "^3.4.0",
     "express": "^4.13.4",
+    "glob": "^7.0.5",
     "mkdirp": "^0.5.1",
     "mustache": "^2.2.1",
     "pug": "^2.0.0-beta3",
-    "pug-cli": "^1.0.0-alpha6",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
@@ -85,7 +85,7 @@
     "shift-codegen": "^5.0.2",
     "shift-parser": "^5.0.1",
     "shortid": "^2.2.6",
-    "uglify-js": "^2.6.2",
+    "uglify-js": "^2.7.1",
     "watch-run": "^1.2.4",
     "watchify": "^3.7.0",
     "whatwg-fetch": "^1.0.0"
