Implement inplace without react
This closes #2.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "./Inplace.jsx",
         {
           "transform": [
-            "react"
+            "./transforms/plain"
           ]
         }
       ],
