--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
   "license": "ISC",
   "dependencies": {
     "@webdesignio/floorman": "^1.0.0",
-    "babel-core": "^6.13.2",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
@@ -79,6 +78,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
+    "rollupify": "^0.3.4",
     "shortid": "^2.2.6",
     "watch-run": "^1.2.4",
     "watchify": "^3.7.0",
