--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "scripts/start",
+    "start": "node scripts/start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node scripts/build"
   },
@@ -67,10 +67,12 @@
     "babelify": "^7.3.0",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
+    "browserify": "^13.1.0",
     "chalk": "^1.1.3",
     "cors": "^2.7.1",
     "envify": "^3.4.0",
     "express": "^4.13.4",
+    "gaze": "^1.1.1",
     "mkdirp": "^0.5.1",
     "mustache": "^2.2.1",
     "pug": "^2.0.0-beta3",
@@ -80,6 +82,8 @@
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "rollupify": "^0.3.4",
+    "shift-codegen": "^5.0.2",
+    "shift-parser": "^5.0.2",
     "shortid": "^2.2.6",
     "watch-run": "^1.2.4",
     "watchify": "^3.7.0",
