--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "dependencies": {
     "@webdesignio/client": "0.0.1",
     "@webdesignio/floorman": "^1.0.0",
+    "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
@@ -73,6 +74,7 @@
     "envify": "^3.4.0",
     "express": "^4.13.4",
     "gaze": "^1.1.1",
+    "glob": "^7.0.6",
     "mkdirp": "^0.5.1",
     "mustache": "^2.2.1",
     "pug": "^2.0.0-beta3",
@@ -84,7 +86,7 @@
     "rollupify": "^0.3.4",
     "shift-codegen": "^5.0.2",
     "shift-parser": "^5.0.2",
-    "shortid": "^2.2.6",
+    "uglify-js": "^2.7.3",
     "watch-run": "^1.2.4",
     "watchify": "^3.7.0",
     "whatwg-fetch": "^1.0.0"
