--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "body-parser": "^1.15.2",
     "browserify": "^13.1.0",
     "chalk": "^1.1.3",
+    "cheerio": "^0.22.0",
     "cors": "^2.7.1",
     "envify": "^3.4.0",
     "express": "^4.13.4",
