--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node scripts/start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node scripts/build"
+    "build": "webdesignio-dozer build"
   },
   "webdesignio": {
     "defaultLanguage": "en",
@@ -54,33 +54,28 @@
   "license": "ISC",
   "dependencies": {
     "@webdesignio/client": "0.0.1",
+    "@webdesignio/dozer": "0.0.2",
     "@webdesignio/floorman": "^1.1.0",
     "@webdesignio/inplace": "^1.0.0",
-    "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "browserify": "^13.1.0",
     "chalk": "^1.1.3",
-    "cheerio": "^0.22.0",
     "cors": "^2.7.1",
-    "envify": "^3.4.0",
+    "envify": "^3.4.1",
     "express": "^4.13.4",
-    "gaze": "^1.1.1",
     "glob": "^7.0.6",
     "mkdirp": "^0.5.1",
     "mustache": "^2.2.1",
-    "pug": "^2.0.0-beta3",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "rollupify": "^0.3.4",
-    "shift-codegen": "^5.0.2",
-    "shift-parser": "^5.0.2",
     "uglify-js": "^2.7.3",
     "watch-run": "^1.2.4",
     "watchify": "^3.7.0",
