--- a/package.json
+++ b/package.json
@@ -21,6 +21,22 @@
       "header"
     ],
     "components": {
+      "Header": [
+        "./header.jsx",
+        {
+          "transform": [
+            "react"
+          ]
+        }
+      ],
+      "Footer": [
+        "./footer.jsx",
+        {
+          "transform": [
+            "react"
+          ]
+        }
+      ],
       "Inplace": "@webdesignio/inplace",
       "SaveSuccessIndicator": [
         "./save_success_indicator_container.jsx",
@@ -45,10 +61,10 @@
   "license": "ISC",
   "dependencies": {
     "@webdesignio/client": "0.0.1",
-    "@webdesignio/dozer": "0.0.3",
+    "@webdesignio/dozer": "0.2.0",
     "@webdesignio/floorman": "^1.2.0",
-    "@webdesignio/inplace": "^1.2.3",
-    "@webdesignio/react": "0.0.0",
+    "@webdesignio/inplace": "^1.3.1",
+    "@webdesignio/react": "0.1.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
@@ -67,7 +83,6 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
-    "rollupify": "^0.3.4",
     "styled-components": "^1.0.8",
     "uglify-js": "^2.7.3",
     "watch-run": "^1.2.4",
